[package]
name = "whitman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.9.0"
toml = "0.5.8"
serde = "1.0.133"
serde_json = "1.0.74"
handlebars = "4.2.0"
maplit = "1.0.1"
html-minifier = "3.0.14"
same-file = "1.0.6"
fs_extra = "1.2.0"
